Added User stories 1-4

--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
 
-<body>
-    <h1>Basic Set Up</h1>
-</body>
+    <body>
+        <header id="header"> <!-- USER STORY #1 -->
+            <h1>FCC Landing Page Projects</h1>
+            <img src="logo.jpeg" alt="generic logo"> <!-- USER STORY #2 -->
+            <nav id="nav-bar"> <!-- USER STORY #3 -->
+                <a href="#" class="nav-link">1</a> <!-- USER STORY #4 --> 
+                <a href="#" class="nav-link">2</a> <!-- USER STORY #4 --> 
+                <a href="#" class="nav-link">3</a> <!-- USER STORY #4 -->
+
+<!-- User Story #5: When I click a .nav-link button in the nav element,
+    I am taken to the corresponding section of the landing page. -->
+
+            </nav>
+        </header>
+    </body>
+
+    <script src="script.js"></script>
 
 </html>
